custom-styles.scss target before spacing to move anchor down because of fixed header

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -49,12 +49,12 @@ hr {
 
 // move anchor down because of fixed header
 // "anchor" is the link you click to an h2
-//:target::before {
-//      content: "";
-//      display: block;
-//      margin-top: -$spacing-unit * 2.2;
-//      height: $spacing-unit * 2.2;
-//}
+:target::before {
+      content: "";
+      display: block;
+      margin-top: -$spacing-unit * 2.2;
+      height: $spacing-unit * 2.2;
+}
 
 // rotating fontawesome icons
 // https://stackoverflow.com/questions/34378940/rotating-a-font-awesome-icon-on-hover/34379054
